# machine-learning-progression

./: README.md  main.py  pyproject.toml
01-linear-regression-predict-house-prices/: README.md  predict-house-prices.ipynb  pyproject.toml
01_single_variable_linear_regression/: README.md  predict-house-prices.ipynb  pyproject.toml
02_multivariable_linear_regression/: README.md  multivariable_linear_regression.ipynb  pyproject.toml
